add news store logic

--- a/src/components/UI/ButtonItem/ButtonItem.module.scss
+++ b/src/components/UI/ButtonItem/ButtonItem.module.scss
@@ -16,3 +16,9 @@
     padding: 15px 0;
   }
 }
+
+.button:disabled {
+  background-color: #b6bcbf;
+  animation: none !important;
+  cursor: default;
+}
