feat(custom): added new color to variables

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -4,6 +4,7 @@ $main-dark-color: #1a1b22;
 $second-dark-color: #347eff;
 $main-light-color: #ffffff;
 $second-ligth-color: #b6bcbf;
+$bg-ligth-color: #f5f6f7;
 
 @mixin flex-column {
   display: flex;
