--- a/src/components/HeaderMenu/HeaderMenu.module.scss
+++ b/src/components/HeaderMenu/HeaderMenu.module.scss
@@ -6,13 +6,14 @@
     gap: 0 50px;
   }
 
-  @media screen and (max-width: 630px) {
+  @media screen and (max-width: 650px) {
     position: absolute;
     top: 102%;
     left: 0;
     width: 100%;
     border-radius: 0 0 20px 20px;
     padding: 20px 40px 40px;
+    color: $main-light-color;
     background-color: $main-dark-color;
     @include flex-column-reverse;
   }
