feat(custom): add change header color and change media
Добавил изменение цвета хедера при открытии меню и поменял перелом меню медиазапросами

--- a/src/components/MainHeader/MainHeader.module.scss
+++ b/src/components/MainHeader/MainHeader.module.scss
@@ -28,3 +28,8 @@
 .header-light {
   color: $main-light-color;
 }
+
+.header-dark {
+  color: $main-light-color;
+  background-color: $main-dark-color;
+}
