--- a/src/components/SearchBlock/SearchBlock.module.scss
+++ b/src/components/SearchBlock/SearchBlock.module.scss
@@ -7,8 +7,8 @@
 
   @media screen and (max-width: 400px) {
     background-image: url("/public/images/searchBg-min.png");
-    background-position: none;
-    background-size: none;
+    background-position: 0% 0%;
+    background-size: auto;
   }
 }
 
@@ -18,6 +18,7 @@
   max-width: 608px;
   padding: 80px 0;
   @include flex-column;
+
   @media screen and (max-width: 768px) {
     gap: 24px;
     max-width: 452px;
