--- a/src/components/PopularItem/PopularItem.module.scss
+++ b/src/components/PopularItem/PopularItem.module.scss
@@ -29,6 +29,7 @@
   font-family: $title-font;
   font-size: clamp(0.875rem, 0.0155rem + 1.7884vw, 1.625rem);
   line-height: 115%;
+  font-weight: 400;
 
   @media screen and (max-width: 768px) {
     font-size: clamp(1rem, 0.7321rem + 1.3393vw, 1.375rem);
