feat(custom): added mixin to check gap supports
Добавил миксин для проверки доступности свойства gap в браузере пользователя
Если gap не
поддерживается - используются margin

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -20,3 +20,16 @@ $bg-ligth-color: #f5f6f7;
   display: flex;
   flex-direction: row;
 }
+
+@mixin gap-check-supports($column-gap: null, $row-gap: null) {
+  @supports (gap: $column-gap) {
+    gap: $column-gap $row-gap;
+  }
+
+  @supports not (gap: $column-gap) {
+    & > :not(:last-child) {
+      margin-right: $row-gap;
+      margin-bottom: $column-gap;
+    }
+  }
+}
