--- a/src/components/HeaderMenu/HeaderMenu.module.scss
+++ b/src/components/HeaderMenu/HeaderMenu.module.scss
@@ -1,9 +1,9 @@
 .headerMenu {
-  gap: 0 70px;
   @include flex-row;
+  @include gap-check-supports(0, 70px);
 
   @media screen and (max-width: 768px) {
-    gap: 0 50px;
+    @include gap-check-supports(0, 50px);
   }
 
   @media screen and (max-width: 650px) {
