feat(custom): change title fw

--- a/src/components/SearchBlock/SearchBlock.module.scss
+++ b/src/components/SearchBlock/SearchBlock.module.scss
@@ -40,6 +40,7 @@
 .title {
   color: $main-light-color;
   font-family: $title-font;
+  font-weight: 400;
   font-size: 60px;
   line-height: 107%;
 
