refactor(custom): refactor button styles
Добавил миксин проверки на hover
Добавил стили кнопке для состояния hover, active

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,11 +1,14 @@
 $title-font: "RobotoSlab", Arial, Helvetica, sans-serif;
 $text-font: "Roboto", Arial, Helvetica, sans-serif;
 $main-dark-color: #1a1b22;
-$second-dark-color: #347eff;
+$second-dark-color: #2f71e5;
 $main-light-color: #ffffff;
 $second-ligth-color: #b6bcbf;
 $bg-ligth-color: #f5f6f7;
 $error-color: #f00;
+
+$button-active: #2a65cc;
+$button-hover: #347eff;
 
 $search-image: "/public/images/searchBg.png";
 $search-image-min: "/public/images/searchBg-min.png";
@@ -35,5 +38,11 @@ $search-image-min: "/public/images/searchBg-min.png";
       margin-right: $row-gap;
       margin-bottom: $column-gap;
     }
+  }
+}
+
+@mixin hover-supports {
+  @media (hover: hover) {
+    @content;
   }
 }
