feat(custom): added background blend
Добавил темный цвет для того, чтоб ошибка не сливалась с задним фоном

--- a/src/components/SearchBlock/SearchBlock.module.scss
+++ b/src/components/SearchBlock/SearchBlock.module.scss
@@ -3,6 +3,8 @@
   background-image: url($search-image);
   background-position: center top;
   background-size: cover;
+  background-color: rgba($color: $main-dark-color, $alpha: 0.7);
+  background-blend-mode: overlay;
   @include flex-column;
 
   @media screen and (max-width: 400px) {
